# miniraft

./: Cargo.toml  Makefile  README.md
.github/workflows/: deploy.yaml  test.yaml
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/miniraft/: all.html  index.html  sidebar-items.js
docs/miniraft/debug/: enum.AnnotationType.html  enum.Level.html  fn.assertion.html  fn.colour_bool.html  fn.colour_server.html  fn.colour_term.html  fn.debug_log.html  fn.init_logger.html  fn.log.html  index.html  sidebar-items.js  struct.Logger.html  type.Annotation.html
docs/miniraft/log/: index.html  sidebar-items.js  struct.Log.html  struct.LogEntry.html  trait.App.html  type.LogIndex.html
docs/miniraft/rpc/: enum.RPC.html  enum.Target.html  index.html  sidebar-items.js  struct.AppendRequest.html  struct.AppendResponse.html  struct.VoteRequest.html  struct.VoteResponse.html  type.SendableMessage.html
docs/miniraft/server/: enum.RaftLeadershipState.html  index.html  sidebar-items.js  struct.CandidateState.html  struct.FollowerState.html  struct.LeaderState.html  struct.NodeReplicationState.html  struct.RaftConfig.html  struct.RaftServer.html  type.ServerId.html  type.Term.html
docs/src/miniraft/: debug.rs.html  lib.rs.html  log.rs.html  rpc.rs.html  server.rs.html
src/: debug.rs  lib.rs  log.rs  rpc.rs  server.rs  transport.rs
tests/: app.rs  commit_entries.rs  common.rs  log.rs  voting.rs
(+12 files in other folders)
