[package]
name = "miniraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.16"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
random_color = "0.6.1"

[dev-dependencies]
serial_test = "*"
